--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "foodies_delight",
   "version": "1.0.0",
   "description": "Food booking application",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon server.js"
   },
   "author": "Somesh",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "pug": "^3.0.2"
   }
 }
