--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Food booking application",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "watch:js": "parcel watch ./public/js/index.js  --out-dir ./public/js --out-file bundle.js",
+    "build:js": "parcel build ./public/js/index.js  --out-dir ./public/js --out-file bundle.js"
   },
   "author": "Somesh",
   "license": "ISC",
@@ -16,5 +18,21 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "parcel-bundler": "^1.12.5",
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "prettier": "^2.2.1"
+  },
+  "engines": {
+    "node": "^14"
   }
 }
