--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "devDependencies": {
     "@babel/polyfill": "^7.12.1",
-    "parcel-bundler": "^1.12.5",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-polyfill": "^6.26.0",
     "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
@@ -30,6 +33,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
+    "parcel-bundler": "^1.12.5",
     "prettier": "^2.2.1"
   },
   "engines": {
