--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Food booking application",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "watch:js": "parcel watch ./public/js/index.js  --out-dir ./public/js --out-file bundle.js",
     "build:js": "parcel build ./public/js/index.js  --out-dir ./public/js --out-file bundle.js"
   },
